@@ -9,7 +9,10 @@ copyright_year   = 2012
 [@Basic]
 [PkgVersion]
 [PodWeaver]
+
 [AutoPrereqs]
+skip=^RDF::TriN3$
+
 [ExecDir]
 
 [GithubMeta]
